k8s/bl-angular-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: frontend-app-deployment
  template:
    metadata:
      labels:
        component: frontend-app-deployment
    spec:
      containers:
        - name: frontend-app-deployment
          image: nicobzh/frontent-demo-app
          ports:
            - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: frontend-app-service
spec:
  type: ClusterIP
  selector:
    component: frontend-app-deployment
  ports:
    - port: 80
      targetPort: 80
