k8s/bl-api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-app
  template:
    metadata:
      labels:
        app: backend-app
    spec:
      containers:
        - name: backend-app
          image: nicobzh/backend-demo-app:latest
          ports:
            - containerPort: 9090
---

apiVersion: v1
kind: Service
metadata:
  name: backend-app-service
spec:
  type: ClusterIP
  selector:
    app: backend-app
  ports:
    - port: 9090
      targetPort: 9090
